Bug 51638 - UNOPKG leaves a lock file unerased
Summary: UNOPKG leaves a lock file unerased
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Extensions (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.6.5
Keywords:
: 51844 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-01 18:06 UTC by Olivier Hallot
Modified: 2012-12-07 13:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2012-07-01 18:06:10 UTC
Invoking UNOPKG GUI in a command prompt under MS Windows, without having LibreOffice running and leaving it with the cancel button leaves a lock file in $(user)\LibreOffice\3 

This lock file notifies LibreOffice that a second instance of LO is running, which is wrong.

This lock file should be erased upon leaving UNOPKG GUI in ways of leaving it.

Issue occurs in branch 3.5 as welll (tested in 3.5.4.2)
Comment 1 Thomas Hackert 2012-07-07 10:35:22 UTC
Hello Olivier, *,
I can confirm it with Debian Testing AMD64 and LODev Version 3.6.0.0.beta3 (Build ID: 3e2b862) with installed Germanophone Lang as well as Help pack ... :(
HTH
Thomas.
Comment 2 Thomas Hackert 2012-07-29 15:31:51 UTC
Hello Olivier, *,
still a problem with LO Version 3.6.0.2 (Build ID: 815c576) and installed Germanophone Help- as well as Lang pack under Debian Testing AMD64 ... :(

I am changing the status to "New", so someone else will have a look at it ... ;)

HTH
Thomas.
Comment 3 João Mac-Cormick 2012-07-30 03:53:17 UTC
*** Bug 51844 has been marked as a duplicate of this bug. ***
Comment 4 Caolán McNamara 2012-12-07 11:13:02 UTC
crashes in 3-6, looks good in 4-0. Seems that 37cc83e594fa8ca131fc5fb98506287b7daedffd fixes this. I'll hack up a stab at a 3-6 backport
Comment 5 Not Assigned 2012-12-07 13:06:35 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=547a3d8f98d0b3db0e0553edcab760b3a80ede51&g=libreoffice-3-6

Resolves: fdo#51638 In "unopkg gui" dispose component context from DeInitVCL


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.