Resolves: fdo#51638 In "unopkg gui" dispose component context from DeInitVCL

...the same way it is done in soffice.bin.  framework's Desktop::dispose()
requires the solar mutex to be still alive, which is destroyed in DeInitVCL, so
if the component context/service manager is only disposed afterwards, the solar
mutex is already gone.

This required moving disposeBridges() around, but it allowed to get rid of
DisposeGuard.

(cherry picked from commit 37cc83e594fa8ca131fc5fb98506287b7daedffd)

Conflicts:
	desktop/source/pkgchk/unopkg/unopkg_app.cxx
	desktop/source/pkgchk/unopkg/unopkg_shared.h

Change-Id: Ibec3d19040fdae23f492cd1e29084e673403e00b
Signed-off-by: Stephan Bergmann <sbergman@redhat.com>